# pico

./: .dockerignore  .env.e2e.example  .env.hindsight.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  carto.config.mjs  carto.json  docker-compose.yml  install.sh  lefthook.yml  package.json  playwright.config.ts  pnpm-lock.yaml  rustfmt.toml  tsconfig.base.json  tsconfig.json  wrangler.jsonc
.githooks/: commit-msg  post-checkout  pre-commit
.github/workflows/: ci.yml
.omp/rules/: dev-breaking-changes.md  no-comments.md  pr-copilot-reviewer.md  pr-open-prep.md  pr-review-workflow.md  ts-bug-prevention.md
apps/engine/: package.json  router.test.ts  tsconfig.json
apps/engine/scripts/: smoke.ts
apps/engine/src/: errors.ts  index.ts  router.ts  translate.ts
apps/web/: package.json  tsconfig.json
apps/web/src/: index.ts
crates/cli/: Cargo.toml
crates/cli/src/: bind.rs  chat.rs  cli_surface.md  main.rs  omp.rs  profile.rs  schedule.rs  terminal_surface.rs  thread.rs  web.rs
crates/core/: Cargo.toml
crates/core/migrations/: 0001_approvals.sql  0002_threads.sql  0003_bindings_and_threads.sql  0004_schedules.sql  0005_thread_channel.sql  0006_schedule_files.sql  0008_branch_prefix.sql  0009_channels.sql
crates/core/src/: activity.rs  app.rs  append_prompt.md  approval.rs  bindings.rs  cancel.rs  channels.rs  config.rs  db.rs  deploy.rs  discord.rs  engine.rs  lib.rs  memory.rs  mid_turn.rs  persona.md  platform_render.rs  prompt.rs  redact.rs  render.rs  session.rs  surface.rs  system_prompt.md  thread_marker.rs  title.rs  ui.rs  worktree.rs
crates/core/src/omp/: camofox.rs  camofox_extension.ts  client.rs  mod.rs  pool.rs  protocol.rs
crates/core/src/schedule/: gate.rs  mod.rs
crates/core/tests/: camofox.rs  discord_chat.rs  discord_gateway.rs  memory_hindsight.rs  omp_rpc.rs
crates/discord/: Cargo.toml
crates/discord/src/: activity.rs  app.rs  approval.rs  config.rs  consts.rs  discord.rs  discord_surface.md  lib.rs  schedule_extension.ts  schedule_host.rs  ui.rs
crates/discord/tests/: discord_chat.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  lib.rs  logging.rs  paths.rs  proc.rs  proto.rs  secret.rs  signal.rs  validate.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: build.rs  client.rs  config.rs  main.rs  proto.rs  slots.rs  stage.rs  supervisor.rs
crates/supervisor/tests/: e2e.rs  shutdown.rs
crates/web/: Cargo.toml  build.rs
crates/web/src/: history.rs  index.html  lib.rs  proto.rs  server.rs  surface.rs  web_surface.md
crates/web/ui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
crates/web/ui/src/: App.tsx  index.css  runtime.tsx  theme.tsx
crates/web/ui/src/components/: markdown-text.tsx  sidebar.tsx  thread.tsx  top-bar.tsx
crates/worker/: Cargo.toml  build.rs
crates/worker/src/: fake_worker.rs  main.rs  scripted_omp.rs
docker/: Dockerfile  entrypoint.sh  seed.sh
docs/architecture/: en.mdx  zh.mdx
docs/cli/: en.mdx  zh.mdx
docs/config/: en.mdx  node.json  zh.mdx
docs/discord-adapter/: en.mdx  zh.mdx
docs/engine/: en.mdx  node.json  zh.mdx
docs/getting-started/: en.mdx  zh.mdx
docs/lifecycle/: en.mdx  zh.mdx
docs/messages/: en.mdx  node.json  zh.mdx
docs/omp-host/: en.mdx  zh.mdx
docs/overview/: en.mdx  node.json  zh.mdx
docs/persistence/: en.mdx  zh.mdx
docs/registry/: en.mdx  node.json  zh.mdx
docs/rendering/: en.mdx  zh.mdx
docs/scheduling/: en.mdx  zh.mdx
docs/secrets/: en.mdx  node.json  zh.mdx
docs/sessions/: en.mdx  node.json  zh.mdx
docs/store/: en.mdx  node.json  zh.mdx
docs/supervisor/: en.mdx  node.json  zh.mdx
docs/turn-engine/: en.mdx  zh.mdx
docs/usage/: en.mdx  zh.mdx
docs/web/: en.mdx  node.json  zh.mdx
docs/web-client/: en.mdx  node.json  zh.mdx
docs/web-hub/: en.mdx  node.json  zh.mdx
docs/worktrees/: en.mdx  node.json  zh.mdx
e2e/: connection.spec.ts  lifecycle.spec.ts  paginate-server.ts  paginate.spec.ts  server.ts  shell.spec.ts  sidebar.spec.ts  sticky-server.ts  sticky.spec.ts  stream-server.ts  stream.spec.ts
legacy/: README.md  docker-compose.yml
legacy/.githooks/: post-checkout  pre-commit
legacy/.github/workflows/: ci.yml
legacy/docker/: Dockerfile
legacy/omp-host/: package.json
legacy/omp-host/extensions/: schedule.ts  secret-guard.ts
legacy/scripts/: hindsight-up.sh  install-hooks.sh  link-worktree-ambient.test.sh
omp-host/: camofox-extension.ts  host.ts  package.json  schedule-extension.ts
omp-host/extensions/: camofox.ts  schedule.ts  secret-guard.ts
scripts/: install-cli.sh  install-hooks.sh  link-worktree-ambient.sh  link-worktree-ambient.test.sh  lint-comment-reasons.sh  lint-comments.sh  lint-comments.test.sh  lint-comments.ts  lint-common.sh  vendor-effect.ts
skills/debug-pico/: SKILL.md
skills/pico/: SKILL.md
src/: assert.test.ts  assert.ts  config.test.ts  config.ts  index.ts
src/config/: config.test.ts  config.ts
src/engine/: conversations.test.ts  conversations.ts  identity.test.ts  identity.ts  message.test.ts  message.ts  provision.test.ts  provision.ts  redact.test.ts  redact.ts  registry.test.ts  registry.ts  runtime.ts  secret-guard.test.ts  secret-guard.ts  sessions.ts  title.test.ts  title.ts  worktree.test.ts  worktree.ts
src/omp/: hub.test.ts  hub.ts  runtime.ts  sessions.test.ts  sessions.ts  title.test.ts
src/store/: db.ts  schema.ts  store.test.ts
src/supervisor/: ready.ts
src/util/: assert.test.ts  assert.ts  id.ts  log.ts  result.ts
src/web/: convert.test.ts  convert.ts  protocol.ts  store.test.ts  store.ts
src/web/client/: App.tsx  index.html  runtime.tsx  state.test.ts  state.ts  styles.css
src/web/client/components/: mode-toggle.tsx  sidebar.tsx  thread.tsx
src/web/client/components/assistant-ui/: markdown-text.tsx  reasoning.tsx  tool-cards.tsx  tool-fallback.tsx  tool-group.tsx
