[workspace]
resolver = "3"
members = ["crates/core", "crates/shared", "crates/worker", "crates/supervisor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
color-eyre = "0.6.5"
dotenvy = "0.15"
libc = "0.2.186"
pico-core = { path = "crates/core" }
pico-shared = { path = "crates/shared" }
poise = "0.6.2"
rig-core = "0.38.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serenity = "0.12.5"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.3", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-cron-scheduler = "0.15.1"
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[workspace.lints.clippy]
pub_use = "deny"

[profile.dev.package.backtrace]
opt-level = 3
