[workspace]
resolver = "3"
members = ["crates/cli", "crates/core", "crates/discord", "crates/shared", "crates/worker", "crates/supervisor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6.5"
cron = "0.17"
dotenvy = "0.15"
libc = "0.2.186"
parking_lot = "0.12.5"
pico-core = { path = "crates/core" }
pico-discord = { path = "crates/discord" }
pico-shared = { path = "crates/shared" }
poise = "0.6.2"
rig-core = "0.38.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serenity = "0.12.5"
sha2 = "0.10"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite"] }
tempfile = "3"
tokio = { version = "1.52.3", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ulid = "1.2.1"

[workspace.lints.clippy]
pub_use = "deny"

[profile.dev.package.backtrace]
opt-level = 3
