[package]
name = "pico-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "pico"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
color-eyre.workspace = true
pico-core.workspace = true
pico-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
