[package]
name = "pico-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre.workspace = true
parking_lot.workspace = true
pico-shared.workspace = true
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
dotenvy.workspace = true

[lints]
workspace = true
