[package]
name = "pico-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
color-eyre.workspace = true
libc.workspace = true
parking_lot.workspace = true
pico-shared.workspace = true
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
