[package]
name = "pico-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
color-eyre.workspace = true
cron.workspace = true
libc.workspace = true
notify.workspace = true
parking_lot.workspace = true
pico-shared.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
