[package]
name = "pico-discord"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
color-eyre.workspace = true
parking_lot.workspace = true
pico-core.workspace = true
pico-shared.workspace = true
poise.workspace = true
serde.workspace = true
serde_json.workspace = true
serenity.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-util.workspace = true

[lints]
workspace = true
