[package]
name = "supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "supervisor"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true
libc.workspace = true
pico-shared.workspace = true
serde.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
libc.workspace = true
serde_json.workspace = true

[lints]
workspace = true
