[package]
name = "pico-supervisor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "pico-supervisor"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
