[package]
name = "pico-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
color-eyre.workspace = true
pico-core.workspace = true
pico-shared.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ulid.workspace = true

[lints]
workspace = true
