[package]
name = "worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
color-eyre.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
