[package]
name = "pico-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "pico-worker"
path = "src/main.rs"

[[bin]]
name = "fake-worker"
path = "src/fake_worker.rs"
required-features = ["test-stub"]

[dependencies]
color-eyre.workspace = true
pico-core.workspace = true
pico-shared.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
test-stub = []

[lints]
workspace = true
